# CeNTREX-motorized-linear-stage

./: README.md
arduino/: motorized_linear_stage.ino
mechanical/: Optics Mount Linear Stage.SLDPRT  Table Mount Linear Stage.SLDPRT
python/: README.rst  pyproject.toml
python/centrex-motorized-linear-stage/: __init__.py  motorized_linear_stage.py
python/tests/: test_centrex_motorized_linear_stage.py
